fix custom status emoji alignment

--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -130,3 +130,12 @@
 .theme-light .userPopout-xaxa6l {
 	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(186, 188, 191, 0.3);
 }
+.userPopout-xaxa6l[style^="width: 300px;"] .customStatus-oN4ZZY {
+	text-align: center;
+	margin-bottom: 0;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	justify-content: center;
+	display: flex;
+}
